Connected manager backend to frontend with @CrossOrigin